create test runners for pixel xl, s7edge, and s6.  also update the apk install script.

--- a/configuration.ini
+++ b/configuration.ini
@@ -5,6 +5,7 @@ deviceName = S7 Edge
 udid = 8802edf5
 appPackage = com.jsdev.instasize
 appActivity = com.jsdev.instasize.activities.MainActivity
+systemPort = 9020
 
 [Samsung_S6_6.0.1]
 platformName = Android
@@ -13,6 +14,14 @@ deviceName = S6
 udid = 05157df532e5e40e
 appPackage = com.jsdev.instasize
 appActivity = com.jsdev.instasize.activities.MainActivity
+systemPort = 9010
 
-
+[Google_Pixel_XL_8.0.1]
+platformName = Android
+platformVersion = 8.0.1
+deviceName = PixelXL
+udid = HT7160200777
+appPackage = com.jsdev.instasize
+appActivity = com.jsdev.instasize.activities.MainActivity
+systemPort = 9014
 
